2002-08-21  Luke Gorrie  <luke@bluetail.com>

	* Makefile.in: Moved the documentation onto separate targets:
	  "info", "info_install", "postscript". Hopefully this will avoid
	  hittings errors in basic installations on non-GNU systems.

2002-08-20  david wallin  <david.wallin@ul.ie>

	* elisp/distel.el (erlang-extended-mode): Added a keybinding
	  for erl-ie-evaluate: C-M-x.

	* elisp/distel-ie.el (erl-ie-evaluate): If the current buffer 
	  isn't a session; start a session and copy the marked region 
	  over to it. All interaction will then take place in the 
	  session buffer.

2002-08-20  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-find-source-under-point): Can now
	handle text like "foo:bar/2" - i.e. reads the arity correctly, so
	you can jump to definitions from e.g. export lists. Actual change
	made in `erl-get-arity'.
	(erl-find-source-under-point): When arity can't be determined,
	finds the first matching function of any arity. This is useful
	when you're writing a function call and can't remember what
	arguments/arities a function has - you can jump to the definition
	and see.

	* All: XEmacs and Emacs20 compatibility fixes (tested edb,
	erl-process-list).

2002-08-19  david wallin  <david.wallin@ul.ie>

	* elisp/distel.el (erlang-extended-mode): Added keybindings 
	for distel-ie.
	C-c C-d s : Start a session.
	C-c C-d c : Copy current buffer to a session.
	C-c C-d r : Copy a marked region in the current buffer to a session.

	* elisp/distel-ie.el (erl-ie-copy-buffer-to-session): Renamed
	erl-ie-copy-to-session.
	* elisp/distel-ie.el (erl-ie-copy-region-to-session): Same as 
	erl-ie-copy-buffer-to-session but works on a marked region.

2002-08-19  Luke Gorrie  <luke@bluetail.com>

	* elisp/distel.el, elisp/erlang-mode-ext.el: Renamed
	erlang-mode-ext.el to distel.el, so that it's obvious what the
	"top level" is. Now you need to (require 'distel) in your init
	file instead of (require 'erlang-mode-ext).
